[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "monospikestereo"
version = "0.1.0"
description = "Training, testing, and raw-spike inference code for MonoSpikeStereo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MonoSpikeStereo Contributors" }]
keywords = ["research", "spike-camera", "stereo", "computer-vision"]
dependencies = [
  "numpy",
  "torch",
  "torchvision",
  "tensorboard",
  "torchmetrics",
  "tqdm",
  "imageio",
  "opt-einsum",
  "timm",
  "PyYAML",
  "Pillow",
  "opencv-python",
  "typing-extensions",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.0",
  "ruff>=0.6.0",
  "mypy>=1.8",
  "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dataset*", "models*", "src*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["dataset", "models", "src", "utils", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
